@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021 Airbyte, Inc., all rights reserved.
+ * Copyright (c) 2022 Airbyte, Inc., all rights reserved.
  */
 
 package io.airbyte.integrations.destination.snowflake;
@@ -12,12 +12,14 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import io.airbyte.commons.json.Jsons;
 import io.airbyte.commons.string.Strings;
+import io.airbyte.db.factory.DataSourceFactory;
 import io.airbyte.db.jdbc.JdbcDatabase;
 import io.airbyte.protocol.models.AirbyteConnectionStatus;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.sql.SQLException;
+import javax.sql.DataSource;
 import org.junit.jupiter.api.Test;
 
 class SnowflakeDestinationIntegrationTest {
@@ -30,7 +32,7 @@ class SnowflakeDestinationIntegrationTest {
     // schema
     // this connector should be updated with multiple credentials, each with a clear purpose (valid,
     // invalid: insufficient permissions, invalid: wrong password, etc..)
-    final JsonNode credentialsJsonString = Jsons.deserialize(new String(Files.readAllBytes(Paths.get("secrets/config.json"))));
+    final JsonNode credentialsJsonString = Jsons.deserialize(Files.readString(Paths.get("secrets/config.json")));
     final AirbyteConnectionStatus check = new SnowflakeDestination().check(credentialsJsonString);
     assertEquals(AirbyteConnectionStatus.Status.FAILED, check.getStatus());
   }
@@ -39,9 +41,13 @@ class SnowflakeDestinationIntegrationTest {
   public void testInvalidSchemaName() throws Exception {
     final JsonNode config = getConfig();
     final String schema = config.get("schema").asText();
-    try (final JdbcDatabase database = SnowflakeDatabase.getDatabase(config)) {
+    final DataSource dataSource = SnowflakeDatabase.createDataSource(config);
+    try {
+      final JdbcDatabase database = SnowflakeDatabase.getDatabase(dataSource);
       assertDoesNotThrow(() -> syncWithNamingResolver(database, schema));
       assertThrows(SQLException.class, () -> syncWithoutNamingResolver(database, schema));
+    } finally {
+      DataSourceFactory.close(dataSource);
     }
   }
 
@@ -63,7 +69,7 @@ class SnowflakeDestinationIntegrationTest {
   }
 
   private JsonNode getConfig() throws IOException {
-    final JsonNode config = Jsons.deserialize(new String(Files.readAllBytes(Paths.get("secrets/insert_config.json"))));
+    final JsonNode config = Jsons.deserialize(Files.readString(Paths.get("secrets/insert_config.json")));
     final String schemaName = "schemaName with whitespace " + Strings.addRandomSuffix("integration_test", "_", 5);
     ((ObjectNode) config).put("schema", schemaName);
     return config;
